wip : page actu + css global + taille font

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -12,6 +12,7 @@
 @import "components/presentation";
 @import "components/home-services";
 @import "components/ateliers";
+@import "components/atelier-actus";
 @import "components/global";
 
 ////coucou
