--- a/sites/all/themes/atelierstheme/sass/components/home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home-services.scss
@@ -8,7 +8,7 @@
         
         @include breakpoint($laptop) {
             
-                width: 84vw;
+                width: 65vw;
                 /* float: left; */
                 height: 55vw;
                 margin: 8vw auto;
@@ -18,13 +18,13 @@
     
     .container-containers {
         
-        padding-top: 4vw;
+        //padding-top: 4vw;
         
         .container {
         
             @include breakpoint($laptop) {
 
-                width: 27vw;
+                width: 20vw;
                 float: left;
                 height: 55vw;
                 margin: 0 0.5vw;
@@ -44,20 +44,20 @@
         
     } 
     
-    .title-services {
-        
-        font-family: PermanentMarker;
-        font-size: 12vw;
-        text-align: center;
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 19vw;
-        color: white;
-        
-    }
+    //    .title-services {
+    //        
+    //        font-family: PermanentMarker;
+    //        font-size: 12vw;
+    //        text-align: center;
+    //        position: absolute;
+    //        left: 0;
+    //        right: 0;
+    //        margin-left: auto;
+    //        margin-right: auto;
+    //        margin-top: 19vw;
+    //        color: white;
+    //        
+    //    }
     
     .text {
         
@@ -157,9 +157,9 @@
             
              @include translate(-50%,-50%);
              position: absolute;
-             top: 21%;
+             top: 17%;
              left: 50%;
-             font-size: 1.5vw;
+             font-size: 1vw;
         }
         
     }
