--- a/sites/all/themes/atelierstheme/sass/components/imagetitle.scss
+++ b/sites/all/themes/atelierstheme/sass/components/imagetitle.scss
@@ -1,5 +1,7 @@
+@import "breakpoint";
 @import "../variables/mixin";
 @import "../variables/fonts";
+@import "../variables/variables";
 
 .imagetitle {
     
@@ -15,7 +17,13 @@
         position:absolute;
         font-family: "PermanentMarker";
         color: #ffffff;
+        
         font-size: 7.5vw;
+        
+        @include breakpoint($laptopl) {
+            font-size: 115px;
+        }
+        
         top: 50%;
         left: 50%;
 
