dynamisation block autres - services, home responsive bloqué à 1440 px de large (nouveau max)

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -13,6 +13,8 @@
 @import "components/home-services";
 @import "components/ateliers";
 @import "components/atelier-actus";
+@import "components/autres-services";
+@import "components/footer";
 @import "components/global";
 
 ////coucou
