--- a/sites/all/themes/atelierstheme/sass/components/home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home.scss
@@ -72,6 +72,10 @@
         @include breakpoint($laptop) {
             width: 9vw;
         }
+        @include breakpoint($laptopl) {
+            width: 150px;
+            margin-top: 14px;
+        }
         
     }
 
@@ -107,9 +111,14 @@
         width: 650px;
     }
     @include breakpoint($laptop) {
-        top: 6vw;
+        top: 7vw;
         height: 23vw;
         width: 76vw;
+    }
+    @include breakpoint($laptopl) {
+        top: 86px;
+        height: 350px;
+        width: 1200px;
     }
     .par-bienvenue {
         font-family: 'SourceSansProLight';
@@ -130,6 +139,11 @@
             margin: 5vw 3vw;
             float: left;
         }
+        @include breakpoint($laptopl) {
+            //float: left;
+            font-size: 31px;
+            margin: 50px 49px;
+        }
     }
     .title-bienvenue {
         font-family: PermanentMarker;
@@ -142,11 +156,18 @@
             margin: 0 3vw;
             font-size: 3vw;
         }
+        @include breakpoint($laptopl) {
+            margin: 0 50px;
+            font-size: 51px;
+        }  
     }
     .container-title-pictos {
         position: relative;
         @include breakpoint($laptop) {
             margin-top: 2vw;
+        }
+        @include breakpoint($laptopl) {
+            margin-top: 17px;
         }
         .title-pictos {
             font-family: 'SourceSansProRegular';
@@ -215,6 +236,19 @@
                 }
                 &.ilot_gourmand {
                     margin-left: 2.5vw;
+                }
+            }
+            @include breakpoint($laptopl) {
+                margin-top: 21px;
+                font-size: 21px;
+                &.auto_bleue {
+                    margin-left: 47px;
+                }
+                &.menuiserie {
+                    margin-left: 48px;
+                }
+                &.ilot_gourmand {
+                    margin-left: 39px;
                 }
             }
         }
