--- a/sites/all/themes/atelierstheme/sass/components/home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home-services.scss
@@ -8,26 +8,22 @@
 
         @include breakpoint($laptop) {
 
-                width: 65vw;
-                /* float: left; */
-                height: 55vw;
-                margin: 8vw auto;
+                width:960px;
+                margin: auto;
         }
 
     }
 
     .container-containers {
 
-        //padding-top: 4vw;
-
         .container {
 
             @include breakpoint($laptop) {
 
-                width: 20vw;
+                width: 300px;
                 float: left;
-                height: 55vw;
-                margin: 0 0.5vw;
+                //height: 55vw;
+                margin: 80px 10px;
                 background-color: #f7f7f7;
                 position: relative;
 
@@ -43,38 +39,6 @@
         margin-bottom: 7vw;
 
     }
-
-    //    .title-services {
-    //
-    //        font-family: PermanentMarker;
-    //        font-size: 12vw;
-    //        text-align: center;
-    //        position: absolute;
-    //        left: 0;
-    //        right: 0;
-    //        margin-left: auto;
-    //        margin-right: auto;
-    //        margin-top: 19vw;
-    //        color: white;
-    //
-    //    }
-
-    .text {
-
-        text-align: center;
-        font-family: 'SourceSansProRegular';
-        margin: 127px 0 50px 0;
-
-        .title {
-
-            font-family: 'SourceSansProSemiBold';
-            margin: 25px 0;
-            text-transform: uppercase;
-
-        }
-
-    }
-
 
     .picto_ateliers {
 
@@ -143,7 +107,7 @@
 
                position: absolute;
                top:-132%;
-                width:7vw;
+                width:85px;
 
             }
 
@@ -157,10 +121,16 @@
 
              @include translate(-50%,-50%);
              position: absolute;
-             top: 17%;
              left: 50%;
-             font-size: 1vw;
+             top: 124px;
+             font-size: 20px;
         }
+
+    }
+
+    .text-presentation {
+
+        padding: 25px;
 
     }
 
