--- a/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
@@ -9,11 +9,11 @@
         border-bottom: 3px solid orange;
         margin: 50px 50px;
 
-        @include breakpoint($laptop) {
-
-                height: 207px;
-
-        }
+//        @include breakpoint($laptop) {
+//
+//                height: 207px;
+//
+//        }
 
         .views-field-field-image {
 
