wip mise en page actus

--- a/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
@@ -6,7 +6,7 @@
 
     .actus {
 
-        border-bottom: 3px solid orange;
+ //       border-bottom: 3px solid orange;
         margin: 50px 50px;
 
 //        @include breakpoint($laptop) {
