--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -14,6 +14,7 @@
 @import "components/ateliers";
 @import "components/atelier-actus";
 @import "components/autres-services";
+@import "components/contact";
 @import "components/footer";
 @import "components/global";
 
