--- a/sites/all/themes/atelierstheme/sass/components/autres-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/autres-services.scss
@@ -1,6 +1,7 @@
 @import "breakpoint";
 @import "singularitygs";
 @import "../variables/variables";
+@import "../variables/mixin";
 
 .autres_services {
 
@@ -9,62 +10,100 @@
     text-align: center;
     padding: 5vw;
 
-    h1 {
+    &.text-presentation-block {
 
-        text-transform: uppercase;
-        font-family: 'SourceSansProRegular';
-        font-size: 4vw;
+        h1 {
 
-        @include breakpoint($laptopl) {
-            font-size: 3vw;
+            text-transform: uppercase;
+
         }
 
-    }
+        h2 {
 
-    .img-pictos {
-
-        @include breakpoint($laptopl) {
-            margin-top: 4vw;
-        }
-
-        .picto_ateliers {
-
-            width: 15vw;
-            margin: 7vw 7vw 2vw 7vw;
-
-            img {
-
-                width: 12vw;
-                margin-top: 2vw;
-
-            }
+            font-size: 15px;
 
         }
 
     }
 
     .container-title-pictos {
-        position: relative;
-        margin-top: 2vw;
-        font-size: 2.5vw;
 
-        .menuiserie {
-
-
-                margin-left: 11vw;
-
-        }
+        margin-top: 15px;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        @include translate(-50%,-50%);
+        margin-left: auto;
+        margin-right: auto;
+        width: 279px;
 
         .ilot_gourmand {
 
-
-                margin-left: 9vw;
+            margin-left: 36px;
 
         }
 
         .auto_bleue {
 
-                margin-left: 9vw;
+            margin-left: 43px;
+
+        }
+
+        @include breakpoint($tablet) {
+
+            width: 479px;
+            margin-top: 30px;
+
+            .ilot_gourmand {
+
+                margin-left: 36px;
+
+            }
+
+            .auto_bleue {
+
+                margin-left: 43px;
+
+            }
+
+        }
+
+        @include breakpoint($laptop) {
+
+            width: 656px;
+            margin-top: 45px;
+
+            .ilot_gourmand {
+
+                margin-left: 68px;
+
+            }
+
+            .auto_bleue {
+
+                margin-left: 88px;
+
+            }
+
+
+        }
+
+        @include breakpoint($laptopl) {
+
+            width: 990px;
+            margin-top: 60px;
+
+            .ilot_gourmand {
+
+                margin-left: 188px;
+
+            }
+
+            .auto_bleue {
+
+                margin-left: 205px;
+
+            }
 
         }
 
