--- a/sites/all/themes/atelierstheme/sass/components/don.scss
+++ b/sites/all/themes/atelierstheme/sass/components/don.scss
@@ -6,14 +6,15 @@
     padding: 5vw 2vw;
     color: #9D2537;
     text-align: center;
-    width: 62vw;
+    width: 83vw;
 
     .don-img {
 
-        width:15vw;
-        float:left;
-        margin:0vw 0vw;
+        width: 9vw;
+        /* float: left; */
+        margin: auto;
         display: inline-block;
+        margin-right: 83px;
 
     }
 
