--- a/sites/all/themes/atelierstheme/sass/components/home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home-services.scss
@@ -134,4 +134,18 @@
 
     }
 
+    .text-presentation {
+
+        @include breakpoint($laptop) {
+
+            h1.wtitle {
+
+                font-size: 18px;
+
+            }
+
+        }
+
+    }
+
 }
