--- a/sites/all/themes/atelierstheme/sass/components/contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/contact.scss
@@ -1,6 +1,7 @@
 @import "singularitygs";
 @import "breakpoint";
 @import "../variables/variables";
+@import "../variables/mixin";
 
 .webform-client-form {
 
@@ -52,6 +53,59 @@
     @include breakpoint($tablet) {
 
         width:100%;
+
+    }
+
+    .text-contact {
+
+        text-align: center;
+        position: absolute;
+        margin-top: -73px;
+        right: 0;
+        left: 0;
+
+    }
+
+}
+
+.block-contact {
+
+    background-color: #4b4b4b;
+    height: 100px;
+    width: 100%;
+    margin: 100px auto -100px auto;
+    max-width: 570px;
+
+    text-align: center;
+    color:white;
+    text-transform: uppercase;
+
+    position: relative;
+
+    .contactez-nous {
+
+        font-size:25px;
+        position: relative;
+        top: 50%;
+        @include translate(0%,-50%);
+
+    }
+
+    .mailbox {
+
+        width: 3em;
+        /* float: left; */
+        margin-left: -44%;
+
+        @include breakpoint($tablet) {
+
+            margin-left: -34%;
+
+        }
+
+        position: absolute;
+        margin-top: 1em;
+        stroke: white;
 
     }
 
