--- a/sites/all/themes/atelierstheme/sass/components/contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/contact.scss
@@ -97,7 +97,7 @@
         /* float: left; */
         margin-left: -44%;
 
-        @include breakpoint($tablet) {
+        @include breakpoint($laptop) {
 
             margin-left: -34%;
 
