wip mise en page headers ateliers

--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -236,6 +236,8 @@ body {
             font-size: 1.75vw;
             width: 50vw;
 
+            z-index: 1000000;
+
             a {
 
                 color:white;
