--- a/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/atelier-actus.scss
@@ -33,6 +33,83 @@
             padding:10px 0px;
         }
 
+        .views-field-created-1 {
+
+            max-width:10000px;
+            //text-align: right;
+
+            @include breakpoint($laptop) {
+
+                float: right;
+
+            }
+
+            background-image: url("../images/calendrier.svg");
+            background-repeat: no-repeat;
+
+            width:3em;
+            height: 3em;
+
+             span {
+
+             text-align: center;
+             display: block;
+             color: white;
+             font-size: 20px;
+             padding-top: 11px;
+             margin-top: 20px;
+
+            @include breakpoint($laptop) {
+
+                    margin-top: 11px;
+                    padding-top: 0px;
+
+                }
+
+            }
+
+//            @include breakpoint($laptop) {
+//
+//                float: right;
+//
+//            }
+//
+//            width:150px;
+//            text-align: center;
+//            margin:30px 0;
+//            padding: 5px 25px;
+
+        }
+
+        .views-field-created {
+
+        max-width:10000px;
+        margin-left:0px !important;
+        margin-top: 35px;
+
+        @include breakpoint($laptop) {
+
+            text-align: right;
+            margin-top: 85px;
+
+        }
+
+        text-transform: uppercase;
+
+
+//            @include breakpoint($laptop) {
+//
+//                float: right;
+//
+//            }
+//
+//            width:150px;
+//            text-align: center;
+//            margin:30px 0;
+//            padding: 5px 25px;
+
+        }
+
         .views-field-view-node  {
 
             @include breakpoint($laptop) {
@@ -53,7 +130,7 @@
 
             &:not(:first-child) {
 
-                max-width:750px;
+                //max-width:750px;
 
                 @include breakpoint($laptop) {
 
