--- a/sites/all/themes/atelierstheme/sass/components/contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/contact.scss
@@ -38,15 +38,22 @@
         text-transform: uppercase;
         with:100px !important;
 
-    }
-
-    @include breakpoint($mobilem) {
-
         input {
 
-            width:100%;
+
+            @include breakpoint($tablet) {
+
+                width:30%;
+
+            }
 
         }
+
+    }
+
+    input {
+
+        width:100%;
 
     }
 
