lien logo menu l-off

--- a/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
@@ -397,6 +397,7 @@ a {
     background-color: #4b4b4b;
     text-transform: uppercase;
     display: block;
+    z-index: 10000000;
 
     @include grid-span(12, 1);
 
