--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -20,5 +20,6 @@
 @import "components/footer";
 @import "components/global";
 @import "components/swiper";
+@import "components/gallerie";
 
 ////coucou
