--- a/sites/all/themes/atelierstheme/sass/components/don.scss
+++ b/sites/all/themes/atelierstheme/sass/components/don.scss
@@ -1,3 +1,7 @@
+@import "breakpoint";
+@import "../variables/variables";
+@import "../variables/mixin";
+
 .bloc_don {
 
     font-family: 'SourceSansProRegular';
