wip drop down menu

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -21,5 +21,6 @@
 @import "components/global";
 @import "components/swiper";
 @import "components/gallerie";
+@import "components/drop-down-menu";
 
 ////coucou
