flèche dans "nous contacter"

--- a/sites/all/themes/atelierstheme/sass/components/ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/ateliers.scss
@@ -197,7 +197,7 @@
 
     .contact {
         text-transform: uppercase;
-        background-color: #f7941d;
+        //background-color: #f7941d;
         color: white;
         padding: 11px;
         width: 233px;
