--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -447,5 +447,21 @@ body {
 
 }
 
+.contact {
+
+    position: relative;
+
+    .f_g_droite {
+
+        width: 0.5em;
+        top: 11px;
+        position: absolute;
+        left: 192px;
+
+    }
+
+
+}
+
 
 
