--- a/sites/all/themes/atelierstheme/sass/components/home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home.scss
@@ -237,20 +237,25 @@
     /* float: left; */
     left: 0;
     right: 0;
+
     @include breakpoint($mobiles) {
         width: 14em;
         top: 30vw;
         margin: 0 auto;
     }
+
     @include breakpoint($mobilem) {
         width: 16em;
     }
+
     @include breakpoint($mobilel) {
         width: 22em;
     }
+
     @include breakpoint($tablet) {
         width: 25em;
     }
+
     @include breakpoint($laptop) {
         display: none;
     }
@@ -263,5 +268,46 @@
     @include breakpoint($laptop){
         display: block;
     }
+}
+
+.home-body-actu {
+
+
+    .actu {
+
+        padding:30px;
+
+        .body_offres {
+
+            display: block;
+
+            @include breakpoint($tablet) {
+                display: inline-block;
+                width:49%;
+            }
+
+            &.text-presentation {
+
+                padding:0;
+
+            }
+
+        }
+
+        .im_offres {
+
+            display: block;
+            padding:0 0 0 20px;
+
+            @include breakpoint($tablet) {
+                display: inline-block;
+                width:50%;
+                position: absolute;
+            }
+
+        }
+
+    }
+
 }
 
