--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -526,7 +526,7 @@ body {
     display: block;
     margin: 30px auto;
     text-align: center;
-    background-color:green;
+    background-color:$green;
     position: relative;
 }
 
