--- a/sites/all/themes/atelierstheme/sass/components/drop-down-menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/drop-down-menu.scss
@@ -85,13 +85,13 @@ ul.menu {
         -o-transition: background .1s ease-out;
         transition: background .1s ease-out;
 
-        background-color: beige;
+        background-color: #4b4b4b;
         z-index: 1000000000;
         position: relative;
 
         &:hover {
 
-            background: #f6f6f6;
+            background: #00a886;
 
         }
 
