--- a/sites/all/themes/atelierstheme/sass/components/drop-down-menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/drop-down-menu.scss
@@ -30,22 +30,23 @@ ul.menu {
 
         a {
 
-            line-height: 80px;
+            line-height: 50px;
             padding: 0 20px;
             //height: 80px;
-            color: #777;
+            //color: #777;
+            color:black;
             -webkit-transition: all .1s ease-out;
             -moz-transition: all .1s ease-out;
             -ms-transition: all .1s ease-out;
             -o-transition: all .1s ease-out;
             transition: all .1s ease-out;
 
-            &:hover {
-
-                //color: #eee;
-                color:black;
-
-            }
+//            &:hover {
+//
+//                //color: #eee;
+//                color:black;
+//
+//            }
 
         }
 
@@ -69,16 +70,13 @@ ul.menu {
     li.leaf {
 
         text-align: center;
-        //float: left;
         display: block;
 
-        //width: 125px;
         padding: 0px;
-        //margin: 0px 10px;
         color: #777;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        border-radius: 4px;
+//        -webkit-border-radius: 4px;
+//        -moz-border-radius: 4px;
+//        border-radius: 4px;
         -webkit-transition: background .1s ease-out;
         -moz-transition: background .1s ease-out;
         -ms-transition: background .1s ease-out;
@@ -92,6 +90,12 @@ ul.menu {
         &:hover {
 
             background: #00a886;
+
+        }
+
+        a {
+
+            color:white;
 
         }
 
